--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>DAY1213</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  <servlet>
+	  <servlet-name>ServletTest01</servlet-name>
+	  <servlet-class>com.test.pr1_1</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  <servlet-name>ServletTest01</servlet-name>
+	  <url-pattern>/test/pr1_1</url-pattern>
+	</servlet-mapping>
+	
+	 <servlet>
+	  <servlet-name>ServletTest02</servlet-name>
+	  <servlet-class>com.test.pr1_2</servlet-class>
+	</servlet>
+	  
+	<servlet-mapping>
+	  <servlet-name>ServletTest02</servlet-name>
+	  <url-pattern>/test/pr1_2</url-pattern>
+	</servlet-mapping>
+	
+	
 </web-app>
